# property-based-tutorial

./: .dockerignore  .gitignore  Changelog.md  Dockerfile  LICENSE  README.md  clone-or-pull.sh
exercises/hs/: README.md  references.md
exercises/hs/doc/: TODO.md
exercises/hs/src/: GettingStarted.hs  joy.hs
exercises/hsmoney/: PropertySuite.lhs  README.md  Step1.lhs  hsmoney.cabal  hsprop.cabal  references.md
exercises/hsmoney/src/: GettingStarted.hs
exercises/hsmoney/workbook-src/: .Step1.lhs.swp  Debugging.lhs  Money.lhs  PropertySuite.lhs  Step1.lhs  workbook.lhs
exercises/js/: js-coinbox.md  js-intro.md  js-money.md  property-based_js.md
spikes/haskell/money/: LICENSE  Main.hs  money.cabal
spikes/haskell/quickcheck-REST/: quichckeck-rest.cabal
spikes/haskell/quickcheck-REST/src/: MonadicQuickcheck.hs
spikes/js/: coinbox.js  money.js
