-- Build instructions
Name:                 quickcheck-rest
Version:              0.1
Build-type:           Simple
Synopsis:             Experiment with monadic quickcheck for REST
Description:
             Experiment with monadic quickcheck for REST and files. With wreq.
License:              BSD3
License-file:         LICENSE
Author:               Living Software LTD
Maintainer:           Willem van den Ende <willem@qwan.eu>
Cabal-version:        >= 1.20


Executable loadtest
  Default-Language: Haskell2010
  hs-source-dirs:  src
  default-extensions:
                   OverloadedStrings
  main-is:         MonadicQuickcheck.hs
  ghc-options:     -threaded -Wall -Werror -fno-warn-orphans -rtsopts
  build-depends:   base
                   ,QuickCheck
                   ,wreq
                   ,http-client
                   ,groom
                   , text >= 0.11.2.3
                   , directory == 1.2.1.0
                   , lens == 4.4.0.2




